Shopify ignore template added

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -63,18 +63,9 @@
         --tablet: 900px;
         --inner-content-width: 900px;
         --content-width: 1400px;
+        --white: #ffffff;
         --off-white: #f4f4f4;
         --black: #000000;
-        --grey-light: #eeeeee;
-        --highlight: #1d1d1d;
-        --text: #1d1d1d;
-        --green-dark: #144444;
-        --green-darker: #0c3333;
-        --green-mid: #305c59;
-        --green-light: #088b61;
-        --green-lighter: #ddf2e1;
-        --yellow-mid: #ffb100;
-
 
         --h1-size: {{ settings.h1_size }}px;
         --h2-size: {{ settings.h2_size }}px;
@@ -82,7 +73,7 @@
         --h4-size: {{ settings.h4_size }}px;
         --h5-size: {{ settings.h5_size }}px;
         --h6-size: {{ settings.h6_size }}px;
-        --p-size: {{ settings.p_size }}px;
+        --p-size:  {{ settings.p_size }}px;
       }
 
       *,
