--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,181 +1,1 @@
-<header class="header">
-
-    {% comment %} 
-    Header top 
-    {% endcomment %}
-    <div class="header__top">
-        <div class="header__top__wrap">
-
-            <div class="header__top__wrap__notification">
-                <p class="colour--white"><b>FREE DELIVERY ON ALL ORDERS OVER $100</b> <a href="/pages/frequently-asked-questions#">LEARN MORE</a></p>
-                <p class="colour--white header__top__wrap__notification__mobile" style="display:none;"><a href="#"><b>FREE DELIVERY ON ALL ORDERS</b></a></p>
-            </div> 
-
-            <div class="header__top__wrap__contact">
-                <p class="colour--white"><a href="tel:0800 123 456" class="header__top__wrap__contact__link colour--white"><img loading="lazy" src="{{ 'phone.svg' | asset_url }}" alt="Call us now" width="16" height="16"><b>CALL US</b><span>0800 123 456</span></a></p>
-            </div>
-
-            <a href="{{ routes.cart_url }}" class="header__top__wrap__cart [ js-cart-bubble ][ js-open-side-cart ]">
-                <div class="header__top__wrap__cart__count{% if cart.item_count != 0 %} active{% endif %}">
-                    <span class="[ js-cart-count ]">{{ cart.item_count }}</span>
-                </div>
-            </a>
-
-        </div>
-    </div>
-
-    {% comment %} 
-    Header main 
-    {% endcomment %}
-    <div class="header__main">
-        <div class="header__main__wrap">
-
-            <div class="header__main__wrap__logo">
-                <a href="/" class="header__main__wrap__logo__icon">
-                    <img loading="lazy" src="{{ 'logo.svg' | asset_url }}" alt="The New Zealand Cannabis Dispensary" width="259" height="118">
-                </a>
-            </div>
-
-            <div class="header__main__wrap__menu">
-                {% for link in linklists.main-menu.links %}
-                    <div class="header__main__wrap__menu__item {% if link.current %}current{% endif %} ">
-                        <a href="{{ link.url }}" class="header__main__wrap__menu__item__link">
-                            {{ link.title | escape }}
-                        </a>
-
-                        {% if link.links != blank %}
-                            <div class="header__main__wrap__menu__item__menu">
-                                {% for childlink in link.links %}
-                                <div class="header__main__wrap__menu__item__menu__item">
-                                    <a href="{{ childlink.url }}" data-id="{{ childlink.title }}" class="header__main__wrap__menu__item__menu__item__link {% if childlink.active %}header__main__wrap__menu__item__menu__item__link--current{% endif %}">
-                                        {{ childlink.title | escape }}
-                                    </a>
-                                </div>
-                                {% endfor %}
-                            </div>
-                            {% endif %}
-
-
-                    </div>
-                {%- endfor -%}
-            </div>
-
-            <a href="#" class="header__main__wrap__navburger [ js-navburger ]" onclick="toggleMobileMenu(event)">
-                <span class="header__main__wrap__navburger__ring header__main__wrap__navburger__ring--one"></span>
-                <span class="header__main__wrap__navburger__ring header__main__wrap__navburger__ring--two"></span>
-                <span class="header__main__wrap__navburger__ring header__main__wrap__navburger__ring--three"></span>
-            </a>
-
-        </div>
-    </div>
-
-</header>  
-
-<script>
-    /*------------------------------------------------------------------
-    Sticky header on scroll
-    ------------------------------------------------------------------*/
-    window.addEventListener('scroll', function () {
-        var header = document.querySelector('.header');
-        header.classList.toggle('sticky', window.scrollY > 44);
-    });
-
-
-
-    /**
-    * Close the newsletter popup
-    */
-    function toggleMobileMenu(e) {
-        e.preventDefault();
-        document.querySelector('body').classList.toggle('mobile-menu-active');
-    }
-    
-</script> 
-
-<div class="header__push"></div>
-
-{% comment %} 
-Mobile menu
-{% endcomment %}
-
-<section class="green-mid-slate"></section>
-
-<section class="green-light-slate"></section>
-
-<section class="mobileMenu">
-    <div class="mobileMenu__wrap">
-        <div class="mobileMenu__wrap__menu">
-            {% for link in linklists.main-menu.links %}
-                <div class="mobileMenu__wrap__menu__item mobileMenu__wrap__menu__item--has-children">
-                    <a href="{{ link.url }}" class="mobileMenu__wrap__menu__item__link {% if link.current %}current{% endif %}">
-                        {{ link.title | escape }}
-                    </a>
-                </div>
-            {%- endfor -%}
-        </div>
-    </div>
-</section> 
-  
-
-
-
-{% comment %}
-Sidecart
-{% endcomment %}
-
-<section class="sidecart [ js-side-cart ][ cursor-close ]">
-    <div class="sidecart__inner">
-
-        <button type="button" class="sidecart__inner__close [ js-close-side-cart ]">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
-                <polygon fill-rule="evenodd" points="29.854 25.3 19.482 14.927 29.854 4.553 25.3 0 14.928 10.374 4.555 0 .002 4.553 10.375 14.927 0 25.3 4.553 29.854 14.928 19.48 25.3 29.854" />
-            </svg>
-        </button>
-
-        <div class="sidecart__inner__title">
-            <p><span>YOUR SHOPPING CART</span></p>
-        </div>
-
-        <div class="sidecart__inner__list [ js-side-cart-items ]">
-            {% for item in cart.items %}
-            <div class="sidecart__inner__list__item">
-
-                {% if item.image %}
-                <a href="{{ item.url }}" class="sidecart__inner__list__item__image">
-                    <img class="[ lazyload ]" data-src="{{ item.image | img_url: '540x540' }}" data-srcset="
-                    {{ item.image | img_url: '540x540' }} 540w,
-                    {{ item.image | img_url: '768x768' }} 768w,
-                    {{ item.image | img_url: '968x968' }} 968w,
-                    {{ item.image | img_url: '1080x1080' }} 1080w" alt="{{ item.image.alt | escape }}" />
-                </a>
-                {% endif %}
-
-                <a href="{{ item.url }}" class="sidecart__inner__list__item__details">
-                    <p><strong>{{ item.title | escape }}</strong></p>
-                    <p>{{item.type}}</p>
-                    <p><strong>{{item.price | money}}</strong></p>
-                </a>
-                <a href="{{ routes.cart_change_url }}?line={{ forloop.index }}&amp;quantity=0" class="sidecart__inner__list__item__remove [ js-remove-from-side-cart ]" data-cart-item-index="{{ forloop.index }}">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
-                        <polygon fill-rule="evenodd" points="29.854 25.3 19.482 14.927 29.854 4.553 25.3 0 14.928 10.374 4.555 0 .002 4.553 10.375 14.927 0 25.3 4.553 29.854 14.928 19.48 25.3 29.854" />
-                    </svg>
-                </a>
-            </div>
-            {% endfor %}
-        </div>
-
-        <div class="sidecart__inner__actions">
-
-            <div class="sidecart__inner__actions__total">
-                <h5><strong>SUBTOTAL</strong> <span class="[ js-total ]">{{ cart.total_price | money }}</span></h5>
-            </div>
-
-            <p style="font-size:1.4rem;">Shipping, taxes, and discounts codes calculated at checkout.<br>*All prices are displayed and charged in NZD.</p>
-
-            <a href="{{ routes.cart_url }}" class="button button--yellow button--full">
-                My Cart
-            </a>
-        </div>
-
-    </div>
-</section>
+<header><h1>fhjdkshfjkdshjfksd</h1></header>
