--- a/templates/gift_card.liquid
+++ b/templates/gift_card.liquid
@@ -85,12 +85,12 @@
       }
     {% endstyle %}
 
-    {%- unless settings.type_body_font.system? -%}
+    {% comment %} {%- unless settings.type_body_font.system? -%}
       <link rel="preload" as="font" href="{{ settings.type_body_font | font_url }}" type="font/woff2" crossorigin>
     {%- endunless -%}
     {%- unless settings.type_header_font.system? -%}
       <link rel="preload" as="font" href="{{ settings.type_header_font | font_url }}" type="font/woff2" crossorigin>
-    {%- endunless -%}
+    {%- endunless -%} {% endcomment %}
 
     {{ 'template-giftcard.css' | asset_url | stylesheet_tag }}
   </head>
@@ -139,7 +139,7 @@
           <button class="link gift-card__copy-link">{{ 'gift_cards.issued.copy_code' | t }}</button>
           <span class="gift-card__copy-success form__message" role="status"></span>
           <template>
-            {%- render 'icon-success' -%}{{ 'gift_cards.issued.copy_code_success' | t }}
+            {% comment %} {%- render 'icon-success' -%}{{ 'gift_cards.issued.copy_code_success' | t }} {% endcomment %}
           </template>
         </div>
         {%- if gift_card.pass_url -%}
