--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -19,8 +19,9 @@
       Preconnects for speed improvements
     {% endcomment %}
 
-    <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     <link rel="preconnect" href="https://cdn.shopify.com" crossorigin>
+
+    <link rel="stylesheet" href="https://use.typekit.net/yrp5bcm.css">
 
     {% comment %}
       Page title - contextual to page type inclusions
@@ -64,8 +65,15 @@
         --inner-content-width: 900px;
         --content-width: 1400px;
         --white: #ffffff;
-        --off-white: #f4f4f4;
+        --off-white: #F3F2F1;
         --black: #000000;
+
+        --yellow-light: #FFEFB1;
+        --pink-light: #F7D8DF;
+        --purple-light: #DFDFEE;
+        --blue-light: #E1EDF9;
+        --blue: #557FC0;
+        --green: #54BAAB;
 
         --h1-size: {{ settings.h1_size }}px;
         --h2-size: {{ settings.h2_size }}px;
@@ -86,10 +94,17 @@
         font-size: 10px;
       }
     {% endstyle %}
+
+    {{ 'app.css' | asset_url | stylesheet_tag }}
+    <script src="{{ 'app.js' | asset_url }}" defer="defer"></script>
   </head>
 
   <body>
     {{ content_for_header }}
+
+    {% section 'header' %}
+
+    <h1>Theme Liquid</h1>
 
     {{ content_for_layout }}
   </body>
