--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -60,22 +60,24 @@
 
     {% style %}
       :root {
-        --tablet: 900px;
+
+        /* Widths */
         --inner-content-width: 900px;
         --content-width: 1400px;
-        --off-white: #f4f4f4;
+        --outer-content-width: 1920px;
+
+        /* Colours */
+        --white: #ffffff;
+        --off-white: #F3F2F1;
         --black: #000000;
-        --grey-light: #eeeeee;
-        --highlight: #1d1d1d;
-        --text: #1d1d1d;
-        --green-dark: #144444;
-        --green-darker: #0c3333;
-        --green-mid: #305c59;
-        --green-light: #088b61;
-        --green-lighter: #ddf2e1;
-        --yellow-mid: #ffb100;
+        --yellow-light: #FFEFB1;
+        --pink-light: #F7D8DF;
+        --purple-light: #DFDFEE;
+        --blue-light: #E1EDF9;
+        --blue: #557FC0;
+        --green: #54BAAB;
 
-
+        /* Font Sizes */
         --h1-size: {{ settings.h1_size }}px;
         --h2-size: {{ settings.h2_size }}px;
         --h3-size: {{ settings.h3_size }}px;
@@ -83,6 +85,7 @@
         --h5-size: {{ settings.h5_size }}px;
         --h6-size: {{ settings.h6_size }}px;
         --p-size: {{ settings.p_size }}px;
+
       }
 
       *,
