--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -107,9 +107,9 @@
   <body>
     {{ content_for_header }}
 
-    {% section 'announcement-bar' %}
     {% section 'header' %}
     {% section 'banner' %}
+    {% section 'sidecart' %}
 
     <h1>Theme Liquid</h1>
 
