--- a/source/style.scss
+++ b/source/style.scss
@@ -15,3 +15,4 @@ Base includes
 @import 'sections/header';
 @import 'sections/announcement';
 @import 'sections/banner';
+@import 'sections/sidecart';
