sidecart interactions added

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -89,6 +89,11 @@
 
       }
 
+      .sidecart-background{
+        cursor: -webkit-image-set(url({{ 'close.png' | asset_url }}) 1x,url({{ 'close@2x.png' | asset_url }}) 2x) 15 15,auto;
+      }
+
+
       *,
       *::before,
       *::after {
