--- a/source/sections/sidecart.scss
+++ b/source/sections/sidecart.scss
@@ -2,10 +2,28 @@
     @include full;
     position: fixed;
     z-index: 999;
+    perspective: 2000;
+    opacity: 0;
+    visibility: hidden;
+    transition: all $fast;
 
     &-background {
         @include full;
-        background: rgba(white, 0.6);
+        background: var(--off-white);
+        opacity: 0.9;
+        transition: all $fast;
+        opacity: 0;
+        visibility: hidden;
+        transform: scale(1.1);
+
+        &:before {
+            @include pseudo;
+            @include full;
+            background-image: radial-gradient(var(--green) 0.5px, transparent 0.5px), radial-gradient(var(--green) 0.5px, var(--off-white) 0.5px);
+            background-size: 20px 20px;
+            background-position: 0 0, 10px 10px;
+            opacity: 0.4;
+        }
 
         &-wave2,
         &-wave1 {
@@ -14,7 +32,7 @@
             left: 0;
             top: 0;
             width: 100%;
-            transform: translateY(0%) translateX(-30%) rotate(-30deg);
+            transform: translateY(0%) translateX(-30%) rotate(-40deg);
 
             path {
                 stroke: var(--green);
@@ -22,7 +40,121 @@
         }
 
         &-wave2 {
-            transform: translateY(-50%) translateX(-20%) rotate(-210deg);
+            transform: translateY(-50%) translateX(-20%) rotate(-220deg);
+        }
+    }
+
+    &-draw {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        width: 40rem;
+        background: var(--blue-light);
+        background: white;
+        box-shadow: 0 10px 30px rgba(#000, 0.05);
+        opacity: 0;
+        transition: all $fast;
+        transform: rotateY(-15deg);
+        transform: rotateY(-25deg);
+        transform-origin: 100% 100%;
+
+        &-head {
+            padding: 0 2rem 2rem;
+        }
+        &-items {
+        }
+
+        &-actions {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            padding: 2rem;
+            transition: all $fast;
+            transform: translateY(0%);
+            text-align: center;
+
+            .link {
+                margin-top: 1rem;
+                display: inline-block;
+                text-align: center;
+            }
+
+            &-afterpay {
+                display: flex;
+                flex-wrap: wrap;
+                margin-bottom: 2rem;
+                font-size: 1.4rem;
+                text-align: center;
+                width: 100%;
+                justify-content: center;
+
+                span {
+                    @include regular;
+                }
+                img {
+                    position: relative;
+                    top: 2px;
+                    margin-left: 0.4rem;
+                }
+            }
+
+            &-lineitem {
+                position: relative;
+                display: block;
+
+                h5 {
+                    display: block;
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: space-between;
+                    position: relative;
+
+                    &:after {
+                        @include pseudo;
+                        background: var(--off-white);
+                        width: 100%;
+                        bottom: 9px;
+                        height: 1px;
+                    }
+                }
+
+                span {
+                    background: white;
+                    padding: 0.5rem 0;
+                    display: inline-block;
+                    position: relative;
+                    z-index: 3;
+
+                    &:first-of-type {
+                        padding-right: 2rem;
+                    }
+
+                    &:last-of-type {
+                        padding-left: 2rem;
+                        @include light;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.sidecart-open {
+    .sidecart {
+        opacity: 1;
+        visibility: visible;
+
+        &-background {
+            opacity: 1;
+            visibility: visible;
+            transform: scale(1);
+        }
+
+        &-draw {
+            opacity: 1;
+            transform: rotateY(0);
         }
     }
 }
