--- a/source/utilities/fonts.scss
+++ b/source/utilities/fonts.scss
@@ -155,3 +155,23 @@ hr {
 .white {
   color: white;
 }
+
+/*------------------------------------------------------------------
+Link hovers
+------------------------------------------------------------------*/
+
+$link: var(--green);
+
+a.link,
+a:not([class]) {
+  text-decoration: none;
+  box-shadow: inset 0 -1px 0 $link, 0 1px 0 $link;
+  transition: all 333ms ease;
+  overflow: hidden;
+  color: var(--green);
+
+  &:hover {
+    box-shadow: inset 0 -30px 0 $link, 0 1px 0 $link;
+    color: white !important;
+  }
+}
