added in a new grid type block

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -114,6 +114,7 @@
 
     {% section 'header' %}
     {% section 'banner' %}
+    {% section 'grid-block' %}
     {% section 'sidecart' %}
 
     <h1>Theme Liquid</h1>
