--- a/sections/sidecart.liquid
+++ b/sections/sidecart.liquid
@@ -6,7 +6,7 @@
   {% comment %}
     Background
   {% endcomment %}
-  <div class="sidecart-background" onclick="event.preventDefault();document.body.classList.remove('sidecart-open');">
+  <div class="sidecart-background" onclick="event.preventDefault();document.body.classList.remove('sidecart-visible');">
     {% comment %}
       Wave
     {% endcomment %}
