--- a/source/style.scss
+++ b/source/style.scss
@@ -16,3 +16,5 @@ Base includes
 @import 'sections/announcement';
 @import 'sections/banner';
 @import 'sections/sidecart';
+@import 'sections/search';
+@import 'sections/grid';
