--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -36,17 +36,51 @@
       Actions
     {% endcomment %}
     <div class="header-actions">
-      <a href="/" onclick="event.preventDefault();document.body.classList.add('sidecart-open');" class="header-actions__cart">
+      <a
+        href="/"
+        onclick="event.preventDefault();document.body.classList.add('sidecart-visible');"
+        class="header-actions__cart"
+      >
         <svg xmlns="http://www.w3.org/2000/svg" width="19" height="20">
           <path fill="#FFF" fill-rule="nonzero" d="M9.5 0c3.432 0 6.257 2.546 6.385 5.768h.122C17.644 5.767 19 7.023 19 8.614v8.537C19 18.742 17.644 20 16.007 20H2.993C1.356 20 0 18.742 0 17.152V8.615c0-1.59 1.356-2.848 2.993-2.848h.122C3.244 2.547 6.068 0 9.5 0Zm6.507 7.767h-.118v2.622h-2V7.767H5.11v2.622h-2V7.767h-.117c-.564 0-.993.397-.993.848v8.537c0 .45.429.848.993.848h13.014c.565 0 .993-.397.993-.848V8.615c0-.45-.428-.848-.993-.848ZM9.5 2C7.145 2 5.248 3.682 5.118 5.767h8.764C13.752 3.682 11.855 2 9.5 2Z"/>
         </svg>
       </a>
 
-      <a href="/" class="header-actions__search">
+      <a
+        href="/"
+        onclick="event.preventDefault();window.toggleSearchPane();"
+        class="header-actions__search" 
+      >
         <svg xmlns="http://www.w3.org/2000/svg" width="19.707" height="19.708">
           <path fill="#FFF" fill-rule="nonzero" d="M7.899 0c4.361 0 7.898 3.531 7.898 7.888 0 1.825-.62 3.505-1.663 4.841l5.573 5.563-1.414 1.416-5.577-5.569a7.87 7.87 0 0 1-4.817 1.637C3.537 15.776 0 12.245 0 7.888 0 3.53 3.537 0 7.899 0Zm0 2A5.893 5.893 0 0 0 2 7.888a5.893 5.893 0 0 0 5.899 5.888 5.893 5.893 0 0 0 5.898-5.888A5.893 5.893 0 0 0 7.899 2Z"/>
         </svg>
       </a>
+    </div>
+  </div>
+</div>
+
+{% comment %}
+  Search pane
+{% endcomment %}
+
+<div class="search-pane">
+  <div class="search-pane-wrap">
+    <div class="search-pane-close">
+      <a
+        href="#"
+        class=""
+        onclick="event.preventDefault();document.body.classList.remove('search-visible');"
+      >
+        <img
+          src="{{ 'close-white.svg' | asset_url }}"
+          width="40"
+          height="40"
+          loading="lazy"
+      ></a>
+    </div>
+
+    <div class="search-pane-input">
+      <input type="text" placeholder="What are you looking for?..." class="[ js-search-query ]" id="search-query">
     </div>
   </div>
 </div>
