--- a/source/utilities/fonts.scss
+++ b/source/utilities/fonts.scss
@@ -175,3 +175,35 @@ a:not([class]) {
     color: white !important;
   }
 }
+
+.arrow-link {
+  position: relative;
+  text-decoration: none;
+  color: var(--green);
+  @include bold;
+  font-size: 1.8rem;
+
+  &:after {
+    content: '';
+    position: relative;
+    display: inline-block;
+    background-image: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="40.05" height="24.042"><path fill="%2354BAAB" fill-rule="nonzero" d="m28.029 0 12.02 12.02-12.02 12.022-1.414-1.415 9.623-9.624L0 12.707l.016-2 36.187.295-9.588-9.588L28.029 0Z"/></svg>');
+    background-size: 40.05px 24.042px;
+    background-repeat: no-repeat;
+    width: 40.05px;
+    height: 24.042px;
+    margin-left: 1.4rem;
+    top: 6px;
+    transition: all $fastest;
+  }
+
+  &:hover {
+    &:after {
+      transform: translateX(0.3rem);
+    }
+  }
+}
+
+.colour--primary {
+  color: var(--green);
+}
