--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -82,5 +82,17 @@
     <div class="search-pane-input">
       <input type="text" placeholder="What are you looking for?..." class="[ js-search-query ]" id="search-query">
     </div>
+
+    <div class="search-pane-results">
+      <div class="search-pane-results-title">
+          <h6>Results</h6>
+      </div>
+      <div class="search-pane-results-grid [ js-search-results-grid ]">
+      </div>
+      <div class="search-pane-results-action">
+          <button class="button [ js-show-all-results ]">SHOW ALL RESULTS</button>
+      </div>
+  </div>
   </div>
 </div>
+
