--- a/sections/sidecart.liquid
+++ b/sections/sidecart.liquid
@@ -8,15 +8,18 @@
   {% endcomment %}
   <div class="sidecart-background" onclick="event.preventDefault();document.body.classList.remove('sidecart-visible');">
     {% comment %}
-      Wave
+      Wave top left
     {% endcomment %}
-    <div class="sidecart-background-wave1 [ js-sidecart-wave ]">
+    <div class="sidecart-background-wave1 [ js-wave ]">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
         <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="1" stroke="red" fill-opacity="0"/>
       </svg>
     </div>
 
-    <div class="sidecart-background-wave2 [ js-sidecart-wave ]">
+    {% comment %}
+      Wave top left
+    {% endcomment %}
+    <div class="sidecart-background-wave2 [ js-wave ]">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
         <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="3" stroke="red" fill-opacity="0"/>
       </svg>
