--- a/source/sections/grid.scss
+++ b/source/sections/grid.scss
@@ -2,7 +2,8 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    padding-bottom: 8rem;
+    padding-top: 6rem;
+    padding-bottom: 12rem;
 
     &-wave2,
     &-wave1 {
@@ -21,6 +22,26 @@
     }
 
     &-wave2 {
+        transform: translateY(-50%) translateX(-29%) rotate(-220deg);
+    }
+
+    &-wave3,
+    &-wave4 {
+        @include svg(1366, 768);
+        position: absolute;
+        left: 60%;
+        top: 60%;
+        width: 100%;
+        transform: translateY(0%) translateX(-39%) rotate(-40deg);
+        pointer-events: none;
+        z-index: -1;
+
+        path {
+            stroke: var(--green);
+        }
+    }
+
+    &-wave3 {
         transform: translateY(-50%) translateX(-29%) rotate(-220deg);
     }
 
@@ -72,7 +93,6 @@
             width: 100%;
             @include aspect(1380, 690);
         }
-
 
         &__image {
             top: 0.5rem;
