--- a/source/utilities/fonts.scss
+++ b/source/utilities/fonts.scss
@@ -194,7 +194,7 @@ a:not([class]) {
     height: 24.042px;
     margin-left: 1.4rem;
     top: 6px;
-    transition: all $fastest;
+    transition: all $faster;
   }
 
   &:hover {
