--- a/sections/banner.liquid
+++ b/sections/banner.liquid
@@ -1,9 +1,20 @@
 <div class="banner">
-  <div class="banner-image"></div>
+  <div class="banner-image">
+    <img
+      src="{{ 'banner.jpg' | asset_url }}"
+      alt="grid item image"
+      loading="lazy"
+      width="1640"
+      height="760"
+    >
+  </div>
+
   <div class="banner-text">
     <h1 class="white">
-      Through lifes most <br>
-      vital moments
+      <b>
+        Through lifes most <br>
+        vital moments
+      </b>
     </h1>
     <p>
       <a href="#" class="button">Shop now</a>
