--- a/source/sections/banner.scss
+++ b/source/sections/banner.scss
@@ -8,6 +8,16 @@
         width: 100%;
         max-height: 72rem;
         min-height: 54rem;
+
+        img {
+            position: absolute;
+            display: block;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
 
     &-text {
