--- a/source/sections/search.scss
+++ b/source/sections/search.scss
@@ -34,9 +34,8 @@
             @include pseudo;
             @include full;
             border-radius: 3rem;
-            background: #64bfb4;
+            background: white;
             box-shadow: 0 10px 30px rgba(#000, 0.25);
-            transition: all $faster;
             transition: all $medium;
             transform: scaleX(0.8) scaleY(0.8);
             transform-origin: calc(100% - 3rem) 3rem;
@@ -54,6 +53,10 @@
         opacity: 0;
         transform: scale(0.8);
         transition-delay: 0ms;
+
+        path{
+            fill:var(--green)
+        }
     }
 
     &-input {
@@ -72,17 +75,29 @@
             border: 0;
             background: transparent;
             padding: 2rem 0;
-            color: white;
+            color: var(--green);
             width: 100%;
             outline: 0;
             line-height: 1.4;
-            border-bottom: 2px solid rgba(white, 0.2);
+            border-bottom: 2px solid var(--green);
 
             @include placeholder {
-                color: white;
+                color: var(--green);
                 opacity: 0.4;
             }
         }
+    }
+
+    &-results {
+        position: relative;
+        z-index: 4;
+        padding: 4rem;
+        max-width: var(--inner-content-width);
+        margin: 0 auto;
+        opacity: 0;
+        transition-delay: 0;
+        transition: all $fast;
+        transform: translateY(0.5rem);
     }
 }
 
@@ -113,5 +128,162 @@
         opacity: 1;
         transform: translateY(0);
         transition-delay: 250ms;
+    }
+    .search-pane-results {
+        opacity: 1;
+        transform: translateY(0);
+        transition-delay: 250ms;
+    }
+}
+
+@keyframes placeHolderShimmer {
+    0% {
+        background-position: -468px 0;
+    }
+    100% {
+        background-position: 468px 0;
+    }
+}
+
+.search-pane-results-grid {
+    display: flex;
+    flex-wrap: wrap;
+
+    &__no-results {
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+    }
+
+    &__placeholder {
+        width: calc(33.3333% - 2rem);
+        margin: 0 1rem 2rem;
+        padding: 1rem;
+
+        &__image {
+            @include aspect(1, 1);
+            background: rgba(28, 28, 28, 0.1);
+            animation-duration: 1.25s;
+            animation-fill-mode: forwards;
+            animation-iteration-count: infinite;
+            animation-name: placeHolderShimmer;
+            animation-timing-function: linear;
+            background: rgba(28, 28, 28, 0.1);
+            background: linear-gradient(to right, var(--off-white) 10%, var(--white) 18%, var(--off-white) 33%);
+            background-size: 800px 104px;
+            position: relative;
+            margin-bottom: 1rem;
+        }
+
+        &__title {
+            position: relative;
+
+            p {
+                position: relative;
+                width: 100%;
+                margin-bottom: 0.5rem;
+                line-height: 1.2 !important;
+
+                &:before {
+                    @include pseudo;
+                    top: 2px;
+                    height: 20px;
+                    left: 0;
+                    right: 0;
+                    background: rgba(28, 28, 28, 0.1);
+                    animation-duration: 1.25s;
+                    animation-fill-mode: forwards;
+                    animation-iteration-count: infinite;
+                    animation-name: placeHolderShimmer;
+                    animation-timing-function: linear;
+                    background: rgba(28, 28, 28, 0.1);
+                    background: linear-gradient(to right, var(--off-white) 10%, var(--white) 18%, var(--off-white) 33%);
+                    background-size: 800px 104px;
+                }
+
+                &:after {
+                    @include pseudo;
+                    top: 26px;
+                    height: 20px;
+                    left: 0;
+                    right: 30%;
+                    background: rgba(28, 28, 28, 0.1);
+                    animation-duration: 1.25s;
+                    animation-fill-mode: forwards;
+                    animation-iteration-count: infinite;
+                    animation-name: placeHolderShimmer;
+                    animation-timing-function: linear;
+                    background: rgba(28, 28, 28, 0.1);
+                    background: linear-gradient(to right, var(--off-white) 10%, var(--white) 18%, var(--off-white) 33%);
+                    background-size: 800px 104px;
+                }
+            }
+        }
+
+        &__type {
+            p {
+                position: relative;
+                width: 100%;
+                margin-bottom: 0.5rem;
+
+                &:after {
+                    @include pseudo;
+                    top: 2px;
+                    height: 20px;
+                    left: 0;
+                    right: 20%;
+                    background: rgba(28, 28, 28, 0.1);
+                    animation-duration: 1.25s;
+                    animation-fill-mode: forwards;
+                    animation-iteration-count: infinite;
+                    animation-name: placeHolderShimmer;
+                    animation-timing-function: linear;
+                    background: rgba(28, 28, 28, 0.1);
+                    background: linear-gradient(to right, var(--off-white) 10%, var(--white) 18%, var(--off-white) 33%);
+                    background-size: 800px 104px;
+                }
+            }
+        }
+    }
+
+    &__item {
+        width: calc(33.3333% - 2rem);
+        margin: 0 1rem 2rem;
+        padding: 1rem;
+
+        &__image {
+            @include aspect(1, 1);
+            background: var(--off-white);
+            margin-bottom: 1rem;
+
+            img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        &__type {
+            p {
+                position: relative;
+                width: 100%;
+                margin: 0;
+                margin-bottom: 0.5rem;
+            }
+        }
+
+        &__title {
+            p {
+                position: relative;
+                width: 100%;
+                margin: 0;
+                color: $secondary;
+                @include semi;
+                line-height: 1.2 !important;
+            }
+        }
     }
 }
