--- a/source/style.scss
+++ b/source/style.scss
@@ -12,9 +12,11 @@ Base imports
 Base includes
 ------------------------------------------------------------------*/
 
+@import 'sections/flickity';
 @import 'sections/header';
 @import 'sections/announcement';
 @import 'sections/banner';
 @import 'sections/sidecart';
 @import 'sections/search';
 @import 'sections/grid';
+@import 'sections/collections';
