--- a/source/utilities/buttons.scss
+++ b/source/utilities/buttons.scss
@@ -7,6 +7,7 @@
     text-decoration: none;
     display: inline-block;
     position: relative;
+    border: 0;
     transition: all 111ms ease;
     overflow: hidden;
     box-shadow: 0 10px 30px rgba(#000, 0.05);
