--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -49,7 +49,7 @@
       <a
         href="/"
         onclick="event.preventDefault();window.toggleSearchPane();"
-        class="header-actions__search" 
+        class="header-actions__search"
       >
         <svg xmlns="http://www.w3.org/2000/svg" width="19.707" height="19.708">
           <path fill="#FFF" fill-rule="nonzero" d="M7.899 0c4.361 0 7.898 3.531 7.898 7.888 0 1.825-.62 3.505-1.663 4.841l5.573 5.563-1.414 1.416-5.577-5.569a7.87 7.87 0 0 1-4.817 1.637C3.537 15.776 0 12.245 0 7.888 0 3.53 3.537 0 7.899 0Zm0 2A5.893 5.893 0 0 0 2 7.888a5.893 5.893 0 0 0 5.899 5.888 5.893 5.893 0 0 0 5.898-5.888A5.893 5.893 0 0 0 7.899 2Z"/>
@@ -72,7 +72,7 @@
         onclick="event.preventDefault();document.body.classList.remove('search-visible');"
       >
         <img
-          src="{{ 'close-white.svg' | asset_url }}"
+          src="{{ 'close-green.svg' | asset_url }}"
           width="40"
           height="40"
           loading="lazy"
@@ -84,15 +84,13 @@
     </div>
 
     <div class="search-pane-results">
-      <div class="search-pane-results-title">
-          <h6>Results</h6>
-      </div>
-      <div class="search-pane-results-grid [ js-search-results-grid ]">
-      </div>
+   
+      <div class="search-pane-results-grid [ js-search-results-grid ]"></div>
       <div class="search-pane-results-action">
+        <p>
           <button class="button [ js-show-all-results ]">SHOW ALL RESULTS</button>
+        </p>
       </div>
-  </div>
+    </div>
   </div>
 </div>
-
